# practice

./: algorithm.txt  sb.txt
Blackhole_prac/: .gitignore  CMakeLists.txt
Blackhole_prac/include/: object.h  vertex_data.h  vertex_data.hpp  vk.h  vk.hpp
Blackhole_prac/src/: CMakeLists.txt  main.cpp  vertex_data.cpp  vertex_data.hpp  vk.cpp
Blackhole_prac_RT_shader/include/: vk.hpp
Blackhole_prac_RT_shader/src/: CMakeLists.txt  main.cpp  vk.cpp
CG/: CMakeLists.txt  main.cpp
Contacts/: Contacts.json  main.cpp  main.out
Contacts/Contacts_SourceCode/: main.cpp
Exam/ZUEL/: 25oct24.py
Exam/exam251023/: 1.py
Exam/exam_simulation/: grade.csv  grade.py  program.py  testlib.py
Exam/simulation-20251106/: 1.py  grade.csv  grade.py  out1.txt  program.py  testlib.py
RISC-V/: ex1.asm  print_list_x.asm  risc_v.asm
Test/cpp_test/: str.cpp
Test/sym251022/: grade.csv  grade.py  program.aspo.py  program.empty.py  program.py  testlib.py
Vulkan_prac/: .gitignore  CMakeLists.txt  Vulkan_prac.sln  vk.md
Vulkan_prac/Dependency/include/: shader.hpp  vk_test.hpp
Vulkan_prac/Vulkan_prac/: Vulkan_prac.vcxproj
Vulkan_prac/Vulkan_prac_src/: CMakeLists.txt  main.cpp  shader.cpp  test1.cpp  vk_test.cpp
Vulkan_prac/Vulkan_prac_src/shader/: vertShader.vert
Vulkan_prac/include/glslang/: build_info.h
Vulkan_prac/include/slang/: slang-cpp-types.h  slang-cuda-prelude.h  slang-tag-version.h
Vulkan_prac/include/spirv-headers/: TOSA.001000.1.h  extinst.tosa.001000.1.grammar.json  spirv.bf  spirv.core.grammar.json  spirv.cs  spirv.h  spirv.hpp  spirv.hpp11  spirv.json  spirv.lua  spirv.py  spv.d
Vulkan_prac/include/spirv-tools/: libspirv.h  linker.hpp
Vulkan_prac/old/: main.cpp.old
Vulkan_prac/src/: test1.cpp
XK_work/: requirements.txt  src.py  wbfx.txt
algorithm_prac/: .gitignore  Prompt.txt  addTwoNumbers_II.cpp  arraySign.cpp  calPoints.cpp  canMakeArithmeticProgression.cpp  groupAnagrams.cpp  isMonotonic.cpp  judgeCircle.cpp  largestPerimeter.cpp  lemonadeChange.cpp  lengthOfLongestSubstring.cpp  maxArea.cpp  maxSlidingWindow.cpp  mergeTwoLists.cpp  moveZeroes.cpp  multiply.cpp  myAtoi.cpp  plusOne.cpp  repeatedSubstringPattern.cpp  romanToInt.cpp  setZeroes.cpp  tictactoe.cpp  tmp.cpp  trap.cpp  twoSum.cpp
algorithm_prac/course/: .gitignore  data_structures_lab_student_version.py  list.cpp  select_sort.py  solve.cpp  test_insert_sort.py
algorithm_prac/leetcode/: Prompt.txt  addBinary.cpp  addTwoNumbers.cpp  addTwoNumbers_II.cpp  average.cpp  checkStraightLine.cpp  countOdds.cpp  diagonalSum.cpp  fillMatrix.cpp  findAnagrams.cpp  isAnagram.cpp  isRobotBounded.cpp  lemonadeChange.cpp  lengthOfLastWord.cpp  longestConsecutive.cpp  maxArea.cpp  maxAreaOfIsland.cpp  maximumWealth.cpp  myPow.cpp  plusOne.cpp  reverseList.cpp  spiralOrder.cpp  subarraySum.cpp  threeSum.cpp  toLowerCase.cpp  trap.cpp
algrithem_prac/: isAnagram.cpp  moveZeroes.cpp
architecture_design/: AbstractFactory.cpp  Builder.cpp  FactoryMethod.cpp  ProToType.cpp  SingletonPattern.cpp
graph/: bfs_students.py  dfs_students.py
heap_practice/: req.txt  test_new.cpp
heap_practice/Lookup_in_dict/: main  main.cpp
heap_practice/MailBox/: letter.hpp  mailbox.hpp  postman.hpp
heap_practice/Ore_dig/: ore.hpp  req.txt  robot.hpp
heap_practice/sb_calculator/: sb  sb.cpp  test  test.cpp
memory_prac/errors_and_solutions/: memoryDelete  memoryDelete.cpp
openGL_prac/: CMakeLists.txt
openGL_prac/include/: openGL_test.hpp
openGL_prac/include/glad/: glad.h
openGL_prac/src/: glad.c  main.cpp  openGL_test.cpp
openGL_prac/test/: test.cpp
others/: .gitignore  CMakeLists.txt  main.cpp
program_des/: Syllabus Programming U1-2(2).docx  scrips.md
program_des/1/: test1.py
program_des/10_Oct31/: test.py
program_des/11_Nov4/: 02_sort_asc_desc.py  03_build_and_sort.py  04_write_sums.py  (+5 more)
shader's_principle/: CMakeLists.txt
shader's_principle/include/: Buffers.hpp  Data.hpp  Image.hpp  Screen.hpp  Texture.hpp  VertShader.hpp  vertex.hpp
shader's_principle/src/: Buffers.cpp  Image.cpp  Screen.cpp  Texture.cpp  VertShader.cpp  main.cpp  vertex.cpp
smart_ptr/: CMakeLists.txt  main.cpp  sm_ptr.cpp  sm_ptr.hpp
(+204 files in other folders)
